tests/ui/imports/issue-109343.stderr
error[E0432]: unresolved import `unresolved`
  --> $DIR/issue-109343.rs:4:9
   |
LL | pub use unresolved::f;
   |         ^^^^^^^^^^ use of unresolved module or unlinked crate `unresolved`
   |
help: you might be missing a crate named `unresolved`, add it to your project and import it in your code
   |
LL + extern crate unresolved;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
